[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysymp-elements"
version = "0.1.0"
description = "Python library for interacting with the Symplectic Elements API"
authors = [
    {name = "Daniel Kerchner", email = "kerchner@gwu.edu"},
]
dependencies = [
    "requests",
    "lxml",
    "dataclasses-json",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/kerchner/pysymp-elements"
Repository = "https://github.com/kerchner/pysymp-elements.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"